--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  dotted_border: ^1.0.5
 
 dev_dependencies:
   flutter_test:
@@ -43,6 +44,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
@@ -60,17 +62,23 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: GreatVibes-Regular
+      fonts:
+        - asset: fonts/GreatVibes-Regular.ttf
+          style: italic
+    - family: Itim-Regular
+      fonts:
+        - asset: fonts/Itim-Regular.ttf
+          style: normal
+    - family: Poppins-ExtraBold
+      fonts:
+        - asset: fonts/Poppins/Poppins-ExtraBold.ttf
+          style: normal
+    - family: PatrickHand-Regular
+      fonts:
+        - asset: fonts/Patrick_Hand/PatrickHand-Regular.ttf
+          style: normal
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
